[ADD] less hardcoding and overflow fix

--- a/theme_kaizen/static/src/scss/components/_sidebar.scss
+++ b/theme_kaizen/static/src/scss/components/_sidebar.scss
@@ -38,7 +38,7 @@
         flex: 0 0 30%;
 
         .collapse {
-            @media (min-width: 992px) {
+            @media (min-width: 991px) {
                 display: block !important;
             }
         }
